--- a/spark_sa_secret.yaml
+++ b/spark_sa_secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
-type: kubernetes.io/service-account-token
 metadata:
- name: spark-sa-secret
- annotations:
- kubernetes.io/service-account.name: “spark”
+  name: spark-secret
+  annotations:
+    kubernetes.io/service-account.name: spark
+type: kubernetes.io/service-account-token
