--- a/spark_sa_secret.yaml
+++ b/spark_sa_secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: spark-secret
+  namespace: spark
   annotations:
     kubernetes.io/service-account.name: spark
 type: kubernetes.io/service-account-token
