--- a/csr.yaml
+++ b/csr.yaml
@@ -8,7 +8,7 @@ spec:
   request: ${BASE64_CSR}
   signerName: kubernetes.io/kube-apiserver-client
   usages:
-  - digital signature
-  - key encipherment
-  - server auth
+#  - digital signature
+#  - key encipherment
+#  - server auth
   - client auth
