--- a/spark_sa_role.yaml
+++ b/spark_sa_role.yaml
@@ -7,6 +7,9 @@ subjects:
   - kind: ServiceAccount
     name: spark
     namespace: spark
+  - kind: User
+    name: amukhsimov
+    apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
   name: spark-role
